...
                                            </constraints>
                                        </imageView>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="countryName" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XwN-v8-zKl">
                                            <rect key="frame" x="135" y="15.000000000000002" width="264" height="20.666666666666671"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="countryName" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EyE-KU-Roe">
                                                <rect key="frame" x="15" y="358.33333333333331" width="384" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="countryNameLabel"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="timeZone" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TVl-dv-wav">
                                                <rect key="frame" x="15" y="550" width="384" height="21.666666666666629"/>
                                                <accessibility key="accessibilityConfiguration" identifier="timeZone"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="capitol" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gw1-RK-9cg">
                                                <rect key="frame" x="15" y="418.33333333333331" width="384" height="21.666666666666686"/>
                                                <accessibility key="accessibilityConfiguration" identifier="capitol"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="callingCode" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1JV-uF-qVN">
                                                <rect key="frame" x="15" y="518.33333333333337" width="384" height="21.666666666666629"/>
                                                <accessibility key="accessibilityConfiguration" identifier="callingCode"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="subRegion" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L5T-lD-YBi">
                                                <rect key="frame" x="15" y="486.66666666666663" width="384" height="21.666666666666686"/>
                                                <accessibility key="accessibilityConfiguration" identifier="subRegion"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="currencies" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v2E-m9-XU1">
                                                <rect key="frame" x="15" y="581.66666666666663" width="384" height="21.666666666666629"/>
                                                <accessibility key="accessibilityConfiguration" identifier="currencies"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="languages" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hqf-OB-aEc">
                                                <rect key="frame" x="15" y="613.33333333333337" width="384" height="21.666666666666629"/>
                                                <accessibility key="accessibilityConfiguration" identifier="languages"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="region" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tec-S9-CDp">
                                                <rect key="frame" x="15" y="455" width="384" height="21.666666666666686"/>
                                                <accessibility key="accessibilityConfiguration" identifier="region"/>
...
